tests/errors/test_19.x
// Missing return statement

fn foo(x: i64) -> i64 {

}

fn main() -> void {
    foo(2);
}